--- a/views/terms_show.erb
+++ b/views/terms_show.erb
@@ -14,11 +14,17 @@
     <br>
     <br>
     <br>
-    <!-- <a href="/terms_edit/<%= @term.id %>">Edit <%= @term.name %></a> -->
-    <a href="/terms/<%= @term.id %>/terms_edit">Edit <%= @term.name %></a>
+    <a href="/terms/<%= @term.id %>/edit">Edit <%= @term.name %></a>
+    <br>
+    <br>
+    <br>
+    <button><a href="/">Take me <img src="/images/home.png" alt="Home" /></a></button>
+    <br>
+    <br>
 
-    <!-- <form action="/terms_edit/<%= @term.id %>" method="post">
-      <input type="submit" value="Edit <%= @term.name %>">
-    </form> -->
+    <form action="/terms/<%= @term.id %>" method="post">
+      <input name="_method" value="delete" type="hidden">
+      <input type="submit" value="Delete Term &#128515;">
+    </form>
   </body>
 </html>
