--- a/views/categories_index.erb
+++ b/views/categories_index.erb
@@ -14,6 +14,7 @@
     <br>
     <br>
     <br>
-    <button><a href="/">Take me Home</a></button>
+    <button><a href="/">Take me <img src="/images/home.png" alt="Home" /></a></button>
+
   </body>
 </html>
