--- a/views/categories_new.erb
+++ b/views/categories_new.erb
@@ -7,6 +7,7 @@
   </head>
   <body>
     <h1>Add to our &spades;Awesome&spades; Glossary</h1>
+    <button><a href="/">Take me <img src="/images/home.png" alt="Home" /></a></button>
     <form action="/categories" method="post">
       <ul>
         <li>
@@ -24,5 +25,6 @@
         </li>
       </ul>
     </form>
+
   </body>
 </html>
