--- a/views/categories_show.erb
+++ b/views/categories_show.erb
@@ -6,12 +6,11 @@
     <link rel="stylesheet" href="/css/main.css">
   </head>
   <body>
+    <h1>Our &spades;Awesome&spades; Glossary</h1>
+    <button><a href="/">Take me <img src="/images/home.png" alt="Home" /></a></button>
+    <br>
     <h2>Name: </h2><%= @category.name %>
     <h2>Subject: </h2><%= @category.subject %>
 
-    <br>
-    <br>
-    <br>
-    <button><a href="/">Take me Home</a></button>
   </body>
 </html>
