--- a/views/terms_show.erb
+++ b/views/terms_show.erb
@@ -6,25 +6,24 @@
     <link rel="stylesheet" href="/css/main.css">
   </head>
   <body>
-    <h2>Name: </h2><%= @term.name %>
-    <h2>Definition: </h2><%= @term.definition %>
-    <h2>Author: </h2><%= @term.author %>
-    <h2>Resource: </h2><a href="<%= @term.resource %>"><%= @term.resource %></a>
-
-    <br>
-    <br>
-    <br>
-    <a href="/terms/<%= @term.id %>/edit">Edit <%= @term.name %></a>
-    <br>
-    <br>
-    <br>
+    <h1>Our &spades;Awesome&spades; Glossary</h1>
     <button><a href="/">Take me <img src="/images/home.png" alt="Home" /></a></button>
     <br>
-    <br>
+    <h2>Name: </h2> <%= @term.name %><br>
+    <h2>Definition: </h2> <%= @term.definition %><br>
+    <h2>Author: </h2> <%= @term.author %><br>
+    <h2>Resource: </h2> <a href="<%= @term.resource %>"><%= @term.resource %></a>
 
-    <form action="/terms/<%= @term.id %>" method="post">
-      <input name="_method" value="delete" type="hidden">
-      <input type="submit" value="Delete Term &#128515;">
-    </form>
+    <br><br>
+    <footer>
+      <button><a href="/terms/<%= @term.id %>/edit">Edit <%= @term.name %></a></button>
+      <button>
+        <form action="/terms/<%= @term.id %>" method="post">
+        <input name="_method" value="delete" type="hidden">
+        <input type="submit" value="&#9760 Delete Term &#9760;">
+        </form>
+      </button>
+      <div style="width: 60vw"></div>
+    </footer>
   </body>
 </html>
