--- a/views/homepage.erb
+++ b/views/homepage.erb
@@ -6,29 +6,50 @@
     <link rel="stylesheet" href="/css/main.css">
   </head>
   <body>
-  <h1>Most Recent Terms</h1>
+    <header>
+      <h1>Our &spades;Awesome&spades; Glossary</h1>
+      <div class="right_nav">
+        <button>
+          <a href="/terms">
+            <img src="/images/t.png" />
+            <img src="/images/e.png" />
+            <img src="/images/r.png" />
+            <img src="/images/m.png" />
+            <img src="/images/s.png" />
+          </a>
+        </button>
+
+        <button>
+          <a href="/categories">
+            <img src="/images/c.png" />
+            <img src="/images/a.png" />
+            <img src="/images/t.png" />
+            <img src="/images/e.png" />
+            <img src="/images/g.png" />
+            <img src="/images/o.png" />
+            <img src="/images/r.png" />
+            <img src="/images/i.png" />
+            <img src="/images/e.png" />
+            <img src="/images/s.png" />
+          </a>
+        </button>
+
+        <button>
+          <form action="/terms/search" method="post">
+            <input type="text" name="name" placeholder="Search...">
+            <input type="image" src="/images/search.png" />
+          </form>
+        </button>
+      </div>
+    </header>
+    <h2>Most Recent Terms</h2>
+
+    <div class="most_recent">
     <% @terms.each do |term| %>
       <a href="/terms/<%= term.id %>"><%= term.name %></a>
       <br>
     <% end %>
-
-    <br>
-
-    <button><a href="/terms">List of Terms (sorted by name)</a></button>
-    <button><a href="/categories">List of Categories</a></button>
-
-    <br>
-    <br>
-
-    <button>
-      <form action="/terms/search" method="post">
-        <input type="text" name="name">
-        <input type="submit">
-        <img src="/images/search.png" alt="Search" />
-      </form>
-    </button>
-    <button><a href="/">Take me <img src="/images/home.png" alt="Home" /></a></button>
-
+    </div>
     <br>
 
     <button><a href="/terms/new">Add a Term</a></button>
