--- a/views/terms_new.erb
+++ b/views/terms_new.erb
@@ -7,6 +7,8 @@
   </head>
   <body>
     <h1>Add to our &spades;Awesome&spades; Glossary</h1>
+    <button><a href="/">Take me <img src="/images/home.png" alt="Home" /></a></button>
+
     <form action="/terms" method="post">
       <ul>
         <li>
