--- a/views/categories_show.erb
+++ b/views/categories_show.erb
@@ -1,16 +1,4 @@
-<!DOCTYPE html>
-<html>
-  <head>
-    <meta charset="utf-8">
-    <title>Category: <%= @category.name %></title>
-    <link rel="stylesheet" href="/css/main.css">
-  </head>
-  <body>
-    <h1>Our &spades;Awesome&spades; Glossary</h1>
-    <button><a href="/">Take me <img src="/images/home.png" alt="Home" /></a></button>
-    <br>
-    <h2>Name: </h2><%= @category.name %>
-    <h2>Subject: </h2><%= @category.subject %>
-
-  </body>
-</html>
+<button><a href="/">Take me <img src="/images/home.png" alt="Home" /></a></button>
+<br>
+<h2>Name: </h2> <%= @category.name %><br>
+<h2>Subject: </h2> <%= @category.subject %>
