--- a/views/categories_index.erb
+++ b/views/categories_index.erb
@@ -1,20 +1,11 @@
-<!DOCTYPE html>
-<html>
-  <head>
-    <meta charset="utf-8">
-    <title></title>
-    <link rel="stylesheet" href="/css/main.css">
-  </head>
-  <body>
-    <h1>Categories</h1>
-    <% @categories.each do |category| %>
-      <a href="/categories/<%= category.id %>"><%= category.name %></a>
-      <br>
-    <% end %>
+<div class="in-line">
+  <h1>Categories</h1>
+  <button><a href="/">Take me <img src="/images/home.png" alt="Home" /></a></button>
+</div>
+<br>
+<div class="most_recent">
+  <% @categories.each do |category| %>
+    <a href="/categories/<%= category.id %>"><%= category.name %></a>
     <br>
-    <br>
-    <br>
-    <button><a href="/">Take me <img src="/images/home.png" alt="Home" /></a></button>
-
-  </body>
-</html>
+  <% end %>
+</div>
