--- a/views/categories_new.erb
+++ b/views/categories_new.erb
@@ -1,30 +1,19 @@
-<!DOCTYPE html>
-<html>
-  <head>
-    <meta charset="utf-8">
-    <title></title>
-    <link rel="stylesheet" href="/css/main.css">
-  </head>
-  <body>
-    <h1>Add to our &spades;Awesome&spades; Glossary</h1>
-    <button><a href="/">Take me <img src="/images/home.png" alt="Home" /></a></button>
-    <form action="/categories" method="post">
-      <ul>
-        <li>
-          <label for="name">Name</label>
-          <textarea name="name" rows="1" cols="50"></textarea>
-        </li>
+<h1>Add a Category</h1>
+<button><a href="/">Take me <img src="/images/home.png" alt="Home" /></a></button>
+<form action="/categories" method="post">
+  <ul>
+    <li>
+      <label for="name">Name</label>
+      <textarea name="name" rows="1" cols="50"></textarea>
+    </li>
 
-        <li>
-          <label for="subject">Subject</label>
-          <textarea name="subject" rows="1" cols="50"></textarea>
-        </li>
+    <li>
+      <label for="subject">Subject</label>
+      <textarea name="subject" rows="1" cols="50"></textarea>
+    </li>
 
-        <li>
-          <input type="submit" value="Add Category &#128515;">
-        </li>
-      </ul>
-    </form>
-
-  </body>
-</html>
+    <li>
+      <input type="submit" value="Add Category &#128515;">
+    </li>
+  </ul>
+</form>
